--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
         meta(name="description", content="The Best")
     body
     nav 
+        a(href="/" style="font-size: 20px;") Home 
         a(href="/member" style="font-size: 20px;") Become Member 
         a(href="/admin" style="font-size: 20px;") Become Admin
         a(href="/create-message" style="font-size: 20px;") Create A Message
